--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div ng-include="'views/nav.html'"></div>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -61,7 +62,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/posts.js"></script>
+        <script src="scripts/controllers/postview.js"></script>
+        <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/services/posts.js"></script>
+        <script src="scripts/filters/url.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
