--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,10 @@
         <script src="scripts/controllers/posts.js"></script>
         <script src="scripts/controllers/postview.js"></script>
         <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/controllers/auth.js"></script>
         <script src="scripts/services/posts.js"></script>
+        <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/user.js"></script>
         <script src="scripts/filters/url.js"></script>
 
         <!-- endbuild -->
