--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/controllers/postview.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/auth.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
         <script src="scripts/services/posts.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/user.js"></script>
